--- a/package.json
+++ b/package.json
@@ -1,46 +1,34 @@
 {
-  "name": "hello",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://lemon-flower-02439e303.2.azurestaticapps.net/src/",
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/node": "^16.18.11",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "bootstrap": "^4.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.4"
+  "name": "test",
+  "version": "1.0.0",
+  "proxy": "http://localhost:5000/",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
-    "test": "react-scripts test",
-    "playwright_test": "playwright test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start": "node dist/server.js",
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc --project .",
+    "build-prod": "cd client && npm install && npm run build && cd .. && npm install && npm run build",
+    "server": "nodemon --verbose --watch \"server\" --ext \"ts,json\" --exec ts-node server/server.ts",
+    "client": "cd client && npm start && cd ..",
+    "dev": "concurrently \"npm run client\" \"npm run server\""
+},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.2.6",
-    "@playwright/test": "^1.22.2",
-    "eslint-config-react-app": "^7.0.1"
+    "@types/express": "^4.17.16",
+    "@types/node": "^18.11.18",
+    "concurrently": "^7.6.0",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.5"
   }
 }
