--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,16 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
+  },  
+  "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
+    "@types/express": "^4.17.16",
+    "@types/node": "^18.11.18",
+    "concurrently": "^7.6.0",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
